<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_grey_700"
    tools:context="com.example.almig.android.WriteFootprintTextActivity">


    <com.example.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/mtf_write_footprint_title"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="20dp"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="true"
        app:mtf_image="@drawable/ic_text"
        app:mtf_openKeyboardOnFocus="true"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_write_footprint_title"
            android:hint="@string/write_footprint_title"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="20sp" />
    </com.example.materialtextfield.MaterialTextField>

    <com.example.androidbootstrap.BootstrapButton
        android:layout_height="50dp"
        android:layout_width="140dp"
        android:id="@+id/btn_footprint_write_date"
        android:text="@string/date"
        app:bootstrapBrand="info"
        app:roundedCorners="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf= "@+id/mtf_write_footprint_title"
        app:layout_constraintLeft_toLeftOf="@+id/mtf_write_footprint_title"/>

    <com.example.androidbootstrap.BootstrapButton
        android:layout_height="50dp"
        android:layout_width="140dp"
        android:id="@+id/btn_footprint_write_time"
        android:text="@string/time"
        app:bootstrapBrand="info"
        app:roundedCorners="true"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/mtf_write_footprint_title"
        app:layout_constraintRight_toRightOf="@+id/mtf_write_footprint_title" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="350dp"
        android:id="@+id/iv_footprint_write_picture"
        android:src="@drawable/default_image"
        app:layout_constraintTop_toBottomOf="@+id/btn_footprint_write_time"
        app:layout_constraintLeft_toLeftOf="@+id/mtf_write_footprint_title"
        app:layout_constraintRight_toRightOf="@+id/mtf_write_footprint_title"/>

    <com.example.materialtextfield.MaterialTextField
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:id="@+id/mtf_footprint_write_comment"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="5dp"
        app:mtf_cardCollapsedHeight="4dp"
        app:mtf_hasFocus="false"
        app:mtf_image="@drawable/ic_text"
        app:mtf_openKeyboardOnFocus="true"
        app:layout_constraintTop_toBottomOf="@id/iv_footprint_write_picture"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_footprint_write_comment"
            android:hint="@string/write_footprint_comment"
            android:maxLines="1"
            android:textColor="@android:color/black"
            android:textColorHint="@android:color/white"
            android:textSize="20sp" />
    </com.example.materialtextfield.MaterialTextField>

    <com.example.fabanimation.FloatingActionsMenu
        android:id="@+id/fam_footprint_write_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:fab_addButtonColorNormal="@color/cpb_blue"
        app:fab_addButtonColorPressed="@color/white"
        app:fab_addButtonPlusIconColor="@android:color/black"
        app:fab_labelStyle="@style/menu_labels_style"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginEnd="16dp">

        <com.example.fabanimation.FloatingActionButton
            android:id="@+id/fam_footprint_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_refresh"
            app:fab_colorNormal="@color/cpb_red_dark"
            app:fab_title="@string/reset"
            app:fab_colorPressed="@color/white"/>

        <com.example.fabanimation.FloatingActionButton
            android:id="@+id/fam_footprint_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_save"
            app:fab_colorNormal="@color/custom_default_fill"
            app:fab_title="@string/save"
            app:fab_colorPressed="@color/white"/>

        <com.example.fabanimation.FloatingActionButton
            android:id="@+id/fam_footprint_album"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_album"
            app:fab_colorNormal="@color/main_color_A100"
            app:fab_title="@string/album"
            app:fab_colorPressed="@color/white"/>

        <com.example.fabanimation.FloatingActionButton
            android:id="@+id/fam_footprint_camera"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_camera"
            app:fab_colorNormal="@color/cpb_green"
            app:fab_title="@string/camera"
            app:fab_colorPressed="@color/white"/>

    </com.example.fabanimation.FloatingActionsMenu>

</android.support.constraint.ConstraintLayout>
