<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/search_logo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_margin="8dp"
            android:background="@color/material_grey_300"
            android:gravity="center_vertical" >

            <com.example.almig.android.font.MaterialDesignIconsTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/fontello_search"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <EditText
                android:id="@+id/search_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:inputType="text"
                android:textColor="@color/material_blue_grey_800" />

            <com.example.almig.android.font.MaterialDesignIconsTextView
                android:id="@+id/search_microfon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/fontello_microfon"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <com.example.almig.android.font.MaterialDesignIconsTextView
                android:id="@+id/search_x"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:text="@string/fontello_x_mark"
                android:textColor="@color/material_blue_grey_800"
                android:textSize="18dp"
                tools:ignore="SpUsage" />
        </LinearLayout>

    </RelativeLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_search_item"
        style="@style/ListViewStyle">

    </ListView>

</LinearLayout>
