<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<!--    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="돌 발 퀴 즈!!"
        android:textSize="50sp"
        android:layout_above="@+id/linearLayout"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="24dp" />-->

    <LinearLayout
        android:layout_width="260dp"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="176dp"
            android:layout_gravity="center"
            android:gravity="center" >

            <ImageView
                android:id="@+id/dialog_travel_image"
                android:layout_width="match_parent"
                android:layout_height="176dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:scaleType="centerCrop" />

            <com.example.almig.android.font.MaterialDesignIconsTextView
                android:id="@+id/dialog_travel_left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:text="@string/material_icon_go_left"
                android:textColor="@android:color/white"
                android:textSize="48dp" />

            <com.example.almig.android.font.MaterialDesignIconsTextView
                android:id="@+id/dialog_travel_right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:padding="8dp"
                android:text="@string/material_icon_go_right"
                android:textColor="@android:color/white"
                android:textSize="48dp" />
        </RelativeLayout>

            <com.example.almig.android.font.RobotoTextView
                android:id="@+id/dialog_travel_location"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginLeft="32dp"
                android:layout_marginRight="32dp"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="Q : 이 장소와 관련된 사진은??"
                android:textColor="@color/material_grey_900"
                android:textSize="14sp"
                app:typeface="robotoRegular" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@color/main_color_grey_300" />

        <com.example.almig.android.view.MaterialRippleLayout
            style="@style/RippleStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_background_empty" >

            <com.example.almig.android.font.RobotoTextView
                android:id="@+id/dialog_travel_ok"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:text="@string/ok"
                android:textColor="@color/main_color_600"
                android:textSize="14sp"
                app:typeface="robotoRegular" />
        </com.example.almig.android.view.MaterialRippleLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="200dp"
        android:src="@drawable/npc_guide"
        android:scaleType="fitXY"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>